++++++++++++
FCTX Changes
++++++++++++

Whats new in FCT 1.2
--------------------

 - FIX (486457): #pragma down to warning level 3 for MSC during FCTMF calls.
 - FIX: CMAKE now configures MSC to compile with /W4. 
 - FIX: GCC now compiles with higher warning levels.

Whats new in FCTX 1.1.4
-----------------------

 - FIX (499089): Handle last character truncation in prefix filter.  Turns out
   that a string buffer was missing a +1 for the null terminator.  Also added
   new test_fctkern as a place to start testing the fctkern object. Thanks to
   Roel Schroeven for finding this bug.

Whats new in FCTX 1.1.3
-----------------------

 - FIX (482943): handle 64 bit variables. Thanks to Raedwulf for pointing out
   that the current fct_(x)chk functions may truncate a 64 bit pointer and
   erroneously report false for a true result.

Whats new in FCTX 1.1.2
-----------------------

 - FIX: memory leak in fct_standard_logger_t. 

Whats new in FCTX 1.1.1
-----------------------
 
 - PROJECT: Rename from "FCTest" to "FCTX". The term "FCTest" clashes too much
   on the net, and things with "x" in it are cool. ;-P
 - ENH: FCTMF - Removed need to call FCTMF_SUITE_DEF. The macro will remain for
   backwards compatibility.

Whats new in FCT 1.1
--------------------

 - Addition of fct_xchk: Allows you to customize your checking and error
   reporting. Implementation of fct_chk_eq_str/int/dbl based on the fct_xchk
   interface.
 - CMAKE used for building the FCT tests.
 - Updated all compiles to use the highest warning level and fixed compiler
   warnings.
 - Removed all "assert out of memory" checks and properly checked the memory
   through the entire lifetime of the execution branch.
 - Added fct_req: Function will abort a test block when the requirement is not
   met.
 - Modified fct_chk: Will continue after a failed test.
 - Modified standard logger output to provide a straight continuous line of
   PASS/FAIL statements. Easier to scan failures.